objects/ASI_CRM_MY_VisitationPlanDetailSetting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_MY_Amenities__c</fullName>
        <label>Amenities</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Fixtures__c</fullName>
        <label>Fixtures</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_VPDEventInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_VPDGMAInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMA Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_VPDIOTInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IOT Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_VPDRSPInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSP Input</label>
        <type>Checkbox</type>
    </fields>
    <label>Visitation Plan Detail Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VPDS-{000000}</displayFormat>
        <label>Visitation Plan Detail Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitation Plan Detail Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>